<resources>
    <string name="app_name">Stores List</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="detail_name">Best Buy</string>
    <string name="detail_addr">1230 Oregon Ave</string>
    <string name="detail_city">Beaumont</string>
    <string name="detail_state">TX</string>
    <string name="detail_id">3654</string>
    <string name="detail_lat">-36.6985</string>
    <string name="detail_lon">12.9658</string>
    <string name="detail_zip">77705</string>
    <string name="detail_phone">896-562-1587</string>
    <string name="detail_addr_dummy">ADD: </string>
    <string name="title_activity_activity_store_details">Store Details</string>
    <string name="detail_coordinates">GPS Coordinates</string>
    <string name="list_phone">123-456-7896</string>
    <string name="list_addr">1234 Orego Ave</string>
    <string name="store_logo">Store Loga</string>
    <string name="transition">selected_transition</string>
</resources>
