<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context="com.aashishgodambe.android.brstores.ActivityStoreDetails">


    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/detail_name"
                    android:textColor="@color/primaryColorDark"
                    android:textSize="40sp"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/imageView_detail"
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/store_logo"
                    android:transitionName="@string/transition"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/error" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/linear_addr_layout"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textview_detail_address_dummy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryColorDark"
                            android:text="@string/detail_addr_dummy"
                            android:textSize="@dimen/abc_text_size_large_material" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/textview_detail_address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/primaryColorDark"
                                android:text="@string/detail_addr"
                                android:textSize="@dimen/abc_text_size_large_material" />


                            <TextView
                                android:id="@+id/textview_detail_city"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/primaryColorDark"
                                android:layout_below="@id/textview_detail_address"
                                android:text="@string/detail_city"
                                android:textSize="@dimen/abc_text_size_large_material" />

                            <TextView
                                android:id="@+id/textview_detail_state"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/primaryColorDark"
                                android:layout_below="@id/textview_detail_address"
                                android:layout_toRightOf="@id/textview_detail_city"
                                android:text="@string/detail_state"
                                android:textSize="@dimen/abc_text_size_large_material" />

                            <TextView
                                android:id="@+id/textview_detail_zipcode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/primaryColorDark"
                                android:layout_below="@id/textview_detail_city"
                                android:text="@string/detail_zip"
                                android:textSize="@dimen/abc_text_size_large_material" />




                        </RelativeLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textview_detail_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linear_addr_layout"
                        android:textColor="@color/primaryColorDark"
                        android:layout_marginBottom="8dp"
                        android:text="@string/detail_phone"
                        android:textSize="@dimen/abc_text_size_large_material" />



                    <TextView
                        android:id="@+id/textview_detail_storeID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryColorDark"
                        android:layout_marginBottom="8dp"
                        android:layout_below="@id/textview_detail_phone"
                        android:text="@string/detail_id"
                        android:textSize="@dimen/abc_text_size_large_material" />


                    <TextView
                        android:id="@+id/textview_detail_coorrdinates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryColorDark"
                        android:layout_below="@id/textview_detail_storeID"
                        android:text="@string/detail_coordinates"
                        android:textSize="@dimen/abc_text_size_large_material" />

                    <TextView
                        android:id="@+id/textview_detail_latitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryColorDark"
                        android:layout_below="@id/textview_detail_coorrdinates"
                        android:text="@string/detail_lat"
                        android:textSize="@dimen/abc_text_size_large_material" />

                    <TextView
                        android:id="@+id/textview_detail_longitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryColorDark"
                        android:layout_below="@id/textview_detail_latitude"
                        android:text="@string/detail_lon"
                        android:textSize="@dimen/abc_text_size_large_material" />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>


</LinearLayout>
