<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingLeft="12dp">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="125dp"
            android:layout_height="80dp"
            android:contentDescription="@string/store_logo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/error"
            android:transitionName="@string/transition" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <TextView
                android:id="@+id/textview_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/list_addr"
                android:textColor="@color/primaryColorDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textview_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textview_address"
                android:text="@string/list_phone"
                android:textColor="@color/primaryColorDark"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>